fix: html links fix

--- a/static/catalog.html
+++ b/static/catalog.html
@@ -62,8 +62,8 @@
 
     <nav>
         <!-- Navigation links -->
-        [<a href="catalog.html">Catalog</a>] |
-        [<a href="create-post.html">Create Post</a>]
+        [<a href="/">Catalog</a>] |
+        [<a href="/create">Create Post</a>]
     </nav>
 </header>
 <main>
