--- a/static/create-post.html
+++ b/static/create-post.html
@@ -28,8 +28,8 @@
 
     <nav>
         <!-- Navigation links -->
-        [<a href="catalog.html">Catalog</a>] |
-        [<a href="archive.html">Archive</a>]
+        [<a href="/">Catalog</a>] |
+        [<a href="/archive">Archive</a>]
     </nav>
     <br>
 </header>
