--- a/static/catalog.html
+++ b/static/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1337b04rd - Catalog</title>
+    <title>1337b04rd</title>
     <style>
         /* Set the background color for the entire body */
         body {
